# rustuya

./: .gitignore  Cargo.toml  README.md  cliff.toml  command_discovery_log.txt
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: _config.yml  api.md  architecture.md  faq.md  getting-started.md  index.md  philosophy.md  python-api.md  python-examples.md  rust-api.md
examples/: README.md  _async_sub_discover.rs  _async_test.rs  _async_unified_listener.rs  _dev_35_ctrl.rs  _dev_35_stream.rs  _device_control.rs  _device_stream.rs  _home_test.rs  _sub_discover.rs  _sync_test.rs  _sync_unified_listener.rs  _unified_listener.rs  async_scan.rs  manager.rs  scan.rs  sync_scan.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
src/: crypto.rs  device.rs  error.rs  lib.rs  macros.rs  manager.rs  protocol.rs  runtime.rs  scanner.rs  sync.rs
src/protocol/: mod.rs  v31.rs  v32.rs  v33.rs  v34.rs  v35.rs
